# SQID

./: .dir-locals.el  .editorconfig  .eslintrc.yaml  .gitignore  Cargo.toml  Procfile  README.md  flake.nix  minifiy.sh  package-lock.json  package.json  pom.xml  refactor.documentation  rust-toolchain.toml  sqid-helper  tsconfig.json  tslint.json  vue.config.js
data/: format.md  rules.schema.json
helpers/: README.md
helpers/ansible/: ansible.cfg  build.yml  deploy.yml  production  requirements.txt  site.yml
helpers/java/: pom.xml
helpers/python/: dataUpdate.py  fetchPropertyStatitsics.py  update-statistics.py  updateClassRecords.py  updatePropertyRecords.py  updateRules.py  updateSchemaStatistics.py
helpers/rust/: .containerignore  .logrotate.conf  Cargo.toml  Containerfile  README.md  toolforge.yaml
helpers/rust/src/: classes.rs  jobs.rs  main.rs  properties.rs  rules.rs  sparql.rs  statistics.rs  types.rs
helpers/rust/src/types/: ids.rs  json.rs  php.rs  sparql.rs  sql.rs  statistics.rs
nix/: default.nix
nix/sqid-helper/: default.nix
public/: index.html  manifest.json
public/data/: README.md
public/oauth/: composer.json  config.php  oauth.php  rsa_client.php
src/: App.vue  angucomplete-alt.css  http.ts  i18n.ts  index.html  main.ts  progress.ts  registerServiceWorker.ts  router.ts  shims-vue.d.ts  style.css  test.html  test2.html  toolinfo.json
src/api/: commons.ts  endpoints.ts  index.ts  sparql.ts  sqid.ts  types.ts  wikidata.ts
src/app/: dist.min.js  main.js  sqid.module.js
src/components/: AppFooter.vue  AppNavbar.vue  AppNavbarLogin.vue  AppNavbarNavlinks.vue  AppNavbarSearchBox.vue  Claim.vue  ClaimGroup.vue  ClaimReference.vue  ClaimTable.vue  DataValue.vue  Entity.vue  EntityLink.vue  HelloWorld.vue  Snak.vue  SnakValue.vue  SqidBars.vue  SqidCollapseButton.vue  SqidCollapsibleCard.vue  SqidImage.vue  SqidQualifierIcon.vue
src/data/: abbreviations.txt  articles.json  datatypes.csv  datatypes.js  format.md  properties.csv  properties.js  properties.json  rules.json  rules.schema.json  statistics.json
src/js/: app.js  build.options.js  classViewController.js  classesGetter.js  dist.min.js  main.js  paginationController.js  propertyview.js  queryInterface.js  statController.js  tableController.js  util.js  viewController.js
src/lang/: README.md  de.json  en.json  nb.json  nl_NL.json
src/lib/: README.md  ajv.js  parsimmon.js  require.js
src/locales/: de.json  de.ts  (+2 more)
(+229 files in other folders)
