[package]
name = "sqid-statistics"
version = "0.1.0"
authors = ["Maximilian Marx <maximilian.marx@tu-dresden.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9"
log = { version = "0.4", features = [ "max_level_debug", "release_max_level_warn" ] }
clap = { version = "~2.33.0", features = [ "wrap_help" ] }
serde = "1.0"
thiserror = "1.0"
strum = { version = "0.22", features = [ "derive" ] }
