[package]
name = "sqid-helper"
version = "0.1.0"
description = "Update statistics data for SQID, a Wikidata browser"
authors = ["Maximilian Marx <maximilian.marx@tu-dresden.de>"]
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9"
log = { version = "0.4", features = [ "max_level_trace", "release_max_level_debug" ] }
clap = { version = "~2.33.0", features = [ "wrap_help" ] }
serde = { version = "1.0", features = [ "derive" ] }
serde_repr = "0.1"
serde_json = "1.0"
anyhow = { version = "1.0", features = [ "backtrace" ] }
strum = { version = "0.22", features = [ "derive" ] }
chrono = { version = "0.4", features = [ "serde" ] }
reqwest = { version = "0.11", features = [ "blocking", "json" ] }
csv = "1.1"
indoc = "1.0"
tempfile = "3"
flate2 = "1.0"
nom = "7.1.0"
dirs = "4.0.0"
ini = "1.3.0"
mysql = "22.1.0"

[dev-dependencies]
serde_test = "1.0"
test-log= "0.2.*"
